--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "babel-7-typescript-example",
   "version": "1.0.0",
   "description": "Example TypeScript project built on top of new Babel 7 features",
-  "keywords": ["babel", "babel 7", "typescript", "react", "example"],
+  "keywords": [
+    "babel",
+    "babel 7",
+    "typescript",
+    "react",
+    "example"
+  ],
   "main": "./dist/index.js",
   "repository": "git@github.com:damassi/babel-7-typescript-example.git",
   "author": "Christopher Pappas <damassi.pappas@gmail.com>",
@@ -12,6 +18,7 @@
     "clean:build": "rm -rf dist",
     "coverage": "jest --coverage",
     "prepublishOnly": "yarn build",
+    "debug": "babel-node --inspect-brk --extensions '.ts,.tsx' index.ts",
     "start": "babel-node --extensions '.ts,.tsx' index.ts",
     "test": "jest",
     "test:watch": "jest -o --watch",
@@ -62,6 +69,8 @@
     "typescript-babel-jest": "^1.0.5"
   },
   "dependencies": {
+    "babel-plugin-rewire": "^1.1.0",
+    "longjohn": "^0.2.12",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
   }
