--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,7 @@
     ["module-resolver", {
       "extensions": [".js", ".jsx", ".ts", ".tsx"],
       "root": ["./src"]
-    }]
+    }],
+    "babel-plugin-rewire"
   ]
 }
